移除媒体文件

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,6 @@ out
 
 # ==================== Test Results ====================
 Key Frame Extraction - Java/Results/
+
+# ==================== Media Files ====================
+*.mp4
