--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,6 @@ Key Frame Extraction/Results/
 
 # ==================== Media Files ====================
 *.mp4
+
+# ==================== log ====================
+日志
